feat: delete series in bulk api
