# backend/src/KapitelShelf.Api/swagger.json
@@ -1747,6 +1747,28 @@
             }
           }
         }
+      },
+      "delete": {
+        "tags": [
+          "Series"
+        ],
+        "summary": "Delete series in bulk.",
+        "parameters": [
+          {
+            "name": "seriesIdsToDelete",
+            "in": "query",
+            "description": "The series ids to delete.",
+            "schema": {
+              "type": "string",
+              "format": "uuid"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
       }
     },
     "/series/search": {
